--- a/backstage.yaml
+++ b/backstage.yaml
@@ -6,6 +6,7 @@ metadata:
     A service for testing Backstage functionality. For example, we can trigger errors
     on the sample-service, these are sent to Sentry, then we can view them in the 
     Backstage plugin for Sentry.
+    test
   annotations:
     aws.com/lambda-function-name: testcron
     aws.com/lambda-region: us-east-1    
