--- a/backstage.yaml
+++ b/backstage.yaml
@@ -9,7 +9,8 @@ metadata:
     test
   annotations:
     aws.com/lambda-function-name: fusionapp1
-    aws.com/lambda-region: us-east-1    
+    aws.com/lambda-region: us-east-1
+    backstage.io/techdocs-ref: 'url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component'
 spec:
   type: service
   owner: david@roadie.io
