--- a/backstage.yaml
+++ b/backstage.yaml
@@ -8,8 +8,7 @@ metadata:
     Backstage plugin for Sentry.
     test
   annotations:
-    aws.com/lambda-function-name: fusionapp1
-    aws.com/lambda-region: us-east-1
+    github.com/project-slug: backstage/backstage
  spec:
   type: service
   owner: david@roadie.io
