--- a/backstage.yaml
+++ b/backstage.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Slug
-  description: example.com
+  name: BackstageTechDocs
+  description: Tech docs example integrated with the Backstage GIT repository
   annotations:
     github.com/project-slug: backstage/backstage
 spec:
-  type: website
+  type: service
   lifecycle: production
   owner: guest
