--- a/backstage.yaml
+++ b/backstage.yaml
@@ -5,7 +5,7 @@ metadata:
   description: Tech docs example integrated with the Backstage GIT repository
   annotations:
     github.com/project-slug: backstage/backstage
-    backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master
+    backstage.io/techdocs-ref: url:https://github.com/org/repo
 spec:
   type: service
   lifecycle: production
